# clocker_bot_server

./: Cargo.toml  config.toml
deno/src/: routes.ts  server.ts
src/: clocker.rs  main.rs
