[package]
name = "clocker_bot_serverless"
version = "0.1.0"
authors = ["laffed <roarklaffed@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]