[package]
name = "clocker_bot_server"
version = "0.1.0"
authors = ["laffed <roarklaffed@gmail.com>"]
edition = "2018"


[dependencies]
rocket = "0.4.4"
rocket_codegen = "0.4.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
dotenv = "0.15.0"
headless_chrome = {git = "https://github.com/atroche/rust-headless-chrome.git", rev =  "aaf31d9" }
failure = "0.1.8"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["json"]